# GDPR-COMPLIANCE_AI

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  ai-testing-guide.md  pyproject.toml
.github/: LICENSE-FAQ.md
data/: gdpr_article_map.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  KNOWLEDGE_SOURCES.md  README.md  architecture.md  eval-results.md  sample-output.md  target-users.md  v3-animations.md  v3-api-integration.md  v3-component-tree.md  v3-design-system.md  v3-overview.md  v3-roadmap.md  v4-gap-tracker.md  v4-overview.md  v4-roadmap.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
gold/: baseline.json  compliance_baseline.json  compliance_scenarios.yaml  test_scenarios.yaml
prompts/: classify.txt  compliance_assess.txt  extract.txt  intake_extract.txt  reason.txt  validate.txt
scripts/: _http.py  chunk_and_embed.py  debug_retrieval.py  scrape_bdsg.py  scrape_edpb.py  scrape_gdpr.py  scrape_ttdsg.py  test_verification.py  translate_sources.py  validate_article_map.py  verify_retrieval.py
tests/: compare_eval.py  eval_models.py  eval_scoring.py  gold_set.json  run_compliance_eval.py  run_eval.py  test_api.py  test_cli_serve_assess.py  test_compliance_assessor.py  test_compliance_eval_harness.py  test_compliance_generator.py  test_compliance_intake.py  test_compliance_mapper.py  test_db_repository.py  test_eval_harness.py  test_eval_scoring.py  test_extract_json.py  test_gdpr_text.py  test_gold_yaml.py  test_json_truncation_repair.py  test_models.py  test_pipeline.py  test_retriever.py  test_v2_knowledge.py
(+136 files in other folders)
