[project]
name = "gdpr-ai"
version = "2.0.0"
description = "RAG-powered GDPR article finder for German market scenarios"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Prathamesh Patil", email = "prathamesh.p9594@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "pypdf>=5.0.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "jinja2>=3.1.6",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.44.0",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
gdpr-check = "gdpr_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/gdpr_ai/exceptions.py" = ["N818"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
